--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,7 @@
     <string name="nav_open">Open</string>
     <string name="nav_close">Close</string>
     <string name="find_user">Поиск пользователя</string>
-    <string name="exact_search">Точный поиск</string>    />
+    <string name="exact_search">Точный поиск</string>
+    <string name="find">Найти</string>
+    />
 </resources>
