--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">GetUsersApp</string>
     <string name="get">Get</string>
-    <string name="amount">Количество</string>
+    <string name="amount">Amount</string>
     <string name="title_activity_main2">MainActivity2</string>
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
@@ -13,7 +13,5 @@
     <string name="find_user">Поиск пользователя</string>
     <string name="exact_search">Точный поиск</string>
     <string name="find">Найти</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     />
 </resources>
